# RiverGumSecAILabs

./: .gitignore  .gitmodules  AI_package_install.sh  Install_PreRequisites.sh  Install_TensorFlow.sh  Install_UnslothSFT.sh  README.md  Setup_Lab16.sh  Setup_Lab17.sh  Setup_Lab21.sh  Setup_Lab22.sh  Setup_Lab22_alt.sh  conda_package_install.sh  test_install.sh  unsloth_sft_install.sh  wsl2-install.sh
010_Fundamentals/: Linear_Regression.ipynb  PandasExample.ipynb  PhishingModel.ipynb  pyproject.toml
011_SupervisedLearning/: Supervised_Learning.ipynb  pyproject.toml
016_Fundamentals/: Linear_Regression.ipynb  PandasExample.ipynb  PhishingModel.ipynb
017_SupervisedLearning/: Supervised_Learning.ipynb
020_SupervisedLearning/: Linear_Regression.ipynb  Supervised_Learning.ipynb  pyproject.toml
021_NeuralNetworks/: Neural_Networks.ipynb  pyproject.toml
022_LargeLanguageModels/: LAB_SFT_Counselor.ipynb  SFT_alpaca.ipynb  SFT_bhisblogs.ipynb  SFT_bhisblogs_alpaca.ipynb  SFT_bhisblogs_improved.ipynb  SFT_bhisblogs_infotech_improved.ipynb  SFT_infotech.ipynb  dataprep.ipynb  dot_env_example  inference.ipynb  inference_bhisblogs.ipynb  inference_bhisblogs_alpaca.ipynb  inference_bhisblogs_improved.ipynb  pyproject.toml
024_AdversarialAI/: Adversarial_AI_Intro.ipynb
examples/: Intro_PhishingModel.ipynb  Llama3-Unsloth-Tuning.ipynb  Module02_PandasExample.ipynb  Module02_Supervised_Learning_Phishing_Emails.ipynb  Module02_prepare_dataset_with_pandas.ipynb  PandasExample.ipynb  TBD_Model_Compare.ipynb  bhisblogs.ipynb
labs/: Module02_Neural_Networks.ipynb  (+1 more)
(+21 files in other folders)
