[tool.poetry]
name = "ailabs-010-fundamentals"
version = "0.1.0"
description = ""
authors = ["Joff Thyer <joff@blackhillsinfosec.com>"]
readme = "README.md"
packages = [{include = "ailabs"}]

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
huggingface-hub = "^0.26.2"
transformers = "^4.46.2"
torch = "^2.5.1"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
