[tool.poetry]
name = "ailabs-020-supervisedlearning"
version = "0.1.0"
description = ""
authors = ["Joff Thyer <joff@blackhillsinfosec.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
nltk = "^3.9.1"
seaborn = "^0.13.2"
plotly = "^5.24.1"
scikit-learn = "^1.5.2"
tensorflow = {extras = ["and-cuda"], version = "^2.18.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
